sandbox/output
MockTurnNumberSequence.java:5: error: constructor TurnNumberSequence in class TurnNumberSequence cannot be applied to given types;
    public MockTurnNumberSequence() {
                                    ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
TicketDispenser.java:5: error: cannot find symbol
        this(new TurnNumberSequenceVip(0));
                 ^
  symbol:   class TurnNumberSequenceVip
  location: class TicketDispenser
TicketDispenserTest.java:23: error: cannot find symbol
        TurnNumberSequenceRegular turnNumberSequenceRegular = new TurnNumberSequenceRegular(0);
        ^
  symbol:   class TurnNumberSequenceRegular
  location: class TicketDispenserTest
TicketDispenserTest.java:23: error: cannot find symbol
        TurnNumberSequenceRegular turnNumberSequenceRegular = new TurnNumberSequenceRegular(0);
                                                                  ^
  symbol:   class TurnNumberSequenceRegular
  location: class TicketDispenserTest
TicketDispenserTest.java:69: error: cannot find symbol
        TurnNumberSequence vipTurnNumberSequence = new TurnNumberSequenceVip(1001);
                                                       ^
  symbol:   class TurnNumberSequenceVip
  location: class TicketDispenserTest
TicketDispenserTest.java:82: error: cannot find symbol
        TurnNumberSequence regularTurnNumberSequence = new TurnNumberSequenceRegular(2001);
                                                           ^
  symbol:   class TurnNumberSequenceRegular
  location: class TicketDispenserTest
TicketDispenserTest.java:95: error: cannot find symbol
        TurnNumberSequence turnNumberSequenceVip = new TurnNumberSequenceVip(1001);
                                                       ^
  symbol:   class TurnNumberSequenceVip
  location: class TicketDispenserTest
TicketDispenserTest.java:98: error: cannot find symbol
        TurnNumberSequence turnNumberSequenceRegular = new TurnNumberSequenceRegular(2001);
                                                           ^
  symbol:   class TurnNumberSequenceRegular
  location: class TicketDispenserTest
8 errors
